Created abstract class for vfl buffer and used it to implement concrete async and sync buffer not tested yet